# frappe-translator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/frappe_translator/: __init__.py  _io.py  claude_runner.py  cli.py  config.py  context_assembler.py  discovery.py  models.py  pipeline.py  po_handler.py  progress.py  prompts.py  source_context.py  term_extractor.py  translator.py  validation.py
tests/: conftest.py  test_cli.py  test_discovery.py  test_po_handler.py  test_progress.py  test_prompts.py  test_source_context.py  test_term_extractor.py  test_translator.py  test_validation.py
