[project]
name = "frappe-translator"
version = "0.1.0"
description = "AI-powered translation CLI for Frappe apps using Claude"
requires-python = ">=3.10"
dependencies = [
    "babel>=2.12",
    "click>=8.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.scripts]
frappe-translator = "frappe_translator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frappe_translator"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.11",
    "ty>=0.0.1a6",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["frappe_translator"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.10"
root = ["./src"]

[tool.ty.src]
include = ["src"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
